Create pagination for rainfalls

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -777,6 +777,7 @@ body {
 @import url('./calibrations.scss');
 @import url('./irrigation.scss');
 @import url('./lands.scss');
+@import url('./rainfall.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
