--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -778,6 +778,7 @@ body {
 @import url('./irrigation.scss');
 @import url('./lands.scss');
 @import url('./rainfall.scss');
+@import url('./activities.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
