Add pagination for daily requests

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -779,6 +779,7 @@ body {
 @import url('./lands.scss');
 @import url('./rainfall.scss');
 @import url('./activities.scss');
+@import url('./requests.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
