--- a/app/views/daily_requisitions/index.html.erb
+++ b/app/views/daily_requisitions/index.html.erb
@@ -1,36 +1,58 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Daily Requisition', new_daily_requisition_path, class:"button btn-orange my-3" %>
-<div class='box outerdiv'>
-<h1 class="has-text-centered"><strong>Daily Requisitions</strong></h1>
+<div class="requests-container">
+  <div class="navigation">
+    <div class="buttons">
+      <button class="requests-first-label">New Request</button>
+      <button class="requests-second-label">Requests</button>
+    </div>
+  </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Farm name</th>
-      <th>Requisition</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="pagination">
+    <div class="columns is-centered requests-first-div">
+      <div class="column is-6 mx-auto">
+        <div class="card outerdiv">
+          <div class="">
+            <h1 class="has-text-centered"><strong>New Daily Requisition</strong></h1>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <%= render 'form', daily_requisition: @daily_requisition %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <tbody>
-    <% @daily_requisitions.each do |daily_requisition| %>
-      <tr>
-        <td><%= daily_requisition.company_name %></td>
-        <td><%= daily_requisition.date %></td>
-        <td><%= daily_requisition.season %></td>
-        <td><%= daily_requisition.farm_name %></td>
-        <td><%= daily_requisition.requisition %></td>
-        <td><%= link_to 'Show', daily_requisition %></td>
-        <td><%= link_to 'Edit', edit_daily_requisition_path(daily_requisition) %></td>
-        <td><%= link_to 'Destroy', daily_requisition, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class='box outerdiv requests-second-div'>
+      <h1 class="has-text-centered"><strong>Daily Requisitions</strong></h1>
 
-<br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Company name</th>
+            <th>Date</th>
+            <th>Season</th>
+            <th>Farm name</th>
+            <th>Requisition</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @daily_requisitions.each do |daily_requisition| %>
+            <tr>
+              <td><%= daily_requisition.company_name %></td>
+              <td><%= daily_requisition.date %></td>
+              <td><%= daily_requisition.season %></td>
+              <td><%= daily_requisition.farm_name %></td>
+              <td><%= daily_requisition.requisition %></td>
+              <td><%= link_to 'Show', daily_requisition %></td>
+              <td><%= link_to 'Edit', edit_daily_requisition_path(daily_requisition) %></td>
+              <td><%= link_to 'Destroy', daily_requisition, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
-
