--- a/app/views/timebooks/new.html.erb
+++ b/app/views/timebooks/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="box outerdiv">
+<div class="box outerdiv timebooks-first-div">
 <h1 class="has-text-centered">New Timebook</h1>
 <% Employee.all.each do |employee| %>
   <% unless employee_already_exists(employee.employee_name) %>
