--- a/app/views/timebooks/index.html.erb
+++ b/app/views/timebooks/index.html.erb
@@ -1,46 +1,153 @@
 <p id="notice"><%= notice %></p>
+<div class="timebooks-container">
+  <div class="navigation">
+    <div class="buttons">
+      <button class="timebooks-first-label">New Timebook</button>
+      <button class="timebooks-second-label">Timebooks</button>
+    </div>
+  </div>
 
-<div class="columns is-centered">
-  <div class="column is-9">
-    <%= link_to 'New Timebook', new_timebook_path, class:"button btn-orange my-3" %>
-    <div class='box outerdiv'>
-      <h1>Timebooks</h1>
+  <div class="pagination">
+    <div class="box outerdiv timebooks-first-div">
+    <h1 class="has-text-centered">New Timebook</h1>
+    <% Employee.all.each do |employee| %>
+      <% unless employee_already_exists(employee.employee_name) %>
+        <div class="columns box my-1">
+          <div class="column is-2">
+            <div class="card">
+              <h5 class="has-text-centered"><strong>Name</strong></h5>
+                <div class="content has-text-centered">
+                  <%= employee.employee_name %>
+                </div>
+            </div>
+          </div>
 
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Company Name</th>
-            <th>Farm Name</th>
-            <th>Employee name</th>
-            <th>Employee number</th>
-            <th>Rate</th>
-            <th>Day</th>
-            <th>Gross</th>
-            <th>Season</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
+          <div class="column is-2">
+            <div class="card">
+              <h5 class="has-text-centered"><strong>Emp Number</strong></h5>
+                <div class="content has-text-centered">
+                  <%= employee.employee_number %>
+                </div>
+            </div>
+          </div>
 
-        <tbody>
-          <% @timebooks.each do |timebook| %>
-            <tr>
-              <td><%= timebook.date %></td>
-              <td><%= timebook.company_name %></td>
-              <td><%= timebook.farm_name %></td>
-              <td><%= timebook.employee_name %></td>
-              <td><%= timebook.employee_number %></td>
-              <td><%= timebook.rate %></td>
-              <td><%= timebook.day %></td>
-              <td><%= timebook.gross %></td>
-              <td><%= timebook.season %></td>
-              <td><%= link_to 'Show', timebook %></td>
-              <td><%= link_to 'Edit', edit_timebook_path(timebook) %></td>
-              <td><%= link_to 'Restore', timebook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+          <div class="column is-2">
+            <div class="card">
+              <h5 class="has-text-centered"><strong>Rate</strong></h5>
+                <div class="content has-text-centered">
+                  <%= employee.daily_rate %>
+                </div>
+            </div>
+          </div>
+
+          <div class="column is-6">
+            <%= form_with(model: @timebook, local: true) do |form| %>
+              <% if @timebook.errors.any? %>
+                <div id="error_explanation">
+                  <h2><%= pluralize(@timebook.errors.count, "error") %> prohibited this timebook from being saved:</h2>
+
+                  <ul>
+                    <% @timebook.errors.full_messages.each do |message| %>
+                      <li><%= message %></li>
+                    <% end %>
+                  </ul>
+                </div>
+              <% end %>
+
+              <div class="field">
+                <%= form.text_field :employee_name, value: employee.employee_name, type: :hidden %>
+              </div>
+
+              <div class="field">
+                <%= form.text_field :employee_number, value: employee.employee_number, type: :hidden %>
+              </div>
+
+              <div class="field">
+                <%= form.text_field :rate, value: employee.daily_rate, type: :hidden %>
+              </div>
+
+              <div class="field">
+                <%= form.text_field :gross, value: employee.daily_rate, type: :hidden %>
+              </div>
+
+              <div class="field">
+                <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
+                <%= form.text_field :company_name, value: current_user.company_name, type: :hidden %>
+                <%= form.text_field :farm_name, value: current_user.farm_name, type: :hidden %>
+                <%= form.text_field :season, value: season_active, type: :hidden %>
+              </div>
+
+              <div class="columns">
+                <div class="column is-7">
+                  <div class="field">
+                    <%= form.label :date, class:"label" %>
+                    <%= form.date_select :date %>
+                  </div>
+                </div>
+
+                <div class="column is-2">
+                  <div class="field">
+                    <%= form.label :day, class:'label' %>
+                    <%= form.select :day, [1] %>
+                  </div>
+                </div>
+                <div class="column is-3">
+                  <div class="actions">
+                    <%= form.submit 'Update', class:"button btn-orange" %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+            </div>
+          </div>
+        <% end %>
+      <%end%>
+    </div>
+
+
+    <div class="columns is-centered timebooks-second-div">
+      <div class="column is-12">
+        <div class='box outerdiv'>
+          <h1>Timebooks</h1>
+
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Company Name</th>
+                <th>Farm Name</th>
+                <th>Employee name</th>
+                <th>Employee number</th>
+                <th>Rate</th>
+                <th>Day</th>
+                <th>Gross</th>
+                <th>Season</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <% @timebooks.each do |timebook| %>
+                <tr>
+                  <td><%= timebook.date %></td>
+                  <td><%= timebook.company_name %></td>
+                  <td><%= timebook.farm_name %></td>
+                  <td><%= timebook.employee_name %></td>
+                  <td><%= timebook.employee_number %></td>
+                  <td><%= timebook.rate %></td>
+                  <td><%= timebook.day %></td>
+                  <td><%= timebook.gross %></td>
+                  <td><%= timebook.season %></td>
+                  <td><%= link_to 'Show', timebook %></td>
+                  <td><%= link_to 'Edit', edit_timebook_path(timebook) %></td>
+                  <td><%= link_to 'Restore', timebook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+
