--- a/app/views/cereal_sales/new.html.erb
+++ b/app/views/cereal_sales/new.html.erb
@@ -1,7 +1,7 @@
 
 
-<div class="columns is-centered">
-  <div class="column is-6">
+<div class="columns is-centered csales-first-div">
+  <div class="column is-6 mx-auto">
     <div class="box outerdiv">
       <h1 class="has-text-centered"><strong>New Cereal Sale</strong></h1>
 
