--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -781,8 +781,9 @@ body {
 @import url('./activities.scss');
 @import url('./requests.scss');
 @import url('./timebooks.scss');
+@import url('./cerealSales.scss');
 
-.input[type="text"] {
+input[type="text"] {
   border-bottom: 1px solid red;
   border-top: none;
   border-left: none;
@@ -791,6 +792,10 @@ body {
   padding: 0;
   margin: 0;
 
+  &:hover {
+    border-bottom: 1px solid red;
+  }
+
   &:focus {
     outline: white !important;
     height: 100%;
@@ -798,6 +803,7 @@ body {
     border-right: 1px solid white;
     border-top: 1px solid white;
     border-left: 1px solid white;
+    border-bottom: 1px solid red;
     font-family: 'Times New Roman', Times, serif;
     font-style: oblique;
     font-size: 16px;
