--- a/app/views/layouts/_homepage.html.erb
+++ b/app/views/layouts/_homepage.html.erb
@@ -2,7 +2,9 @@
   <div class="rows">
     <div class="row1" tab-index="1">
       <span>
-        <i class="fas fa-cog fa-3x"></i> 
+        <div class="icon-div">
+          <i class="fas fa-cog fa-2x"></i> 
+        </div>
         <span>
           User Account &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -21,7 +23,9 @@
 
     <div class="row2" tab-index="2">
       <span>
-        <i class="far fa-money-bill-alt fa-3x"></i> 
+        <div class="icon-div">
+        <i class="far fa-money-bill-alt fa-2x"></i>
+        </div> 
         <span>
           ACCOUNTING &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -45,7 +49,9 @@
 
     <div class="row3" tab-index="1">
       <span>
-        <i class="fas fa-warehouse fa-3x"></i> 
+        <div class="icon-div">
+        <i class="fas fa-warehouse fa-2x"></i> 
+        </div> 
         <span>
           WAREHOUSING &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -70,7 +76,9 @@
 
     <div class="row4">
       <span>
-        <i class="fab fa-pagelines fa-3x"></i> 
+        <div class="icon-div">
+          <i class="fab fa-pagelines fa-2x"></i> 
+        </div>
         <span>
           LAND(S) &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -92,7 +100,9 @@
 
     <div class="row5">
       <span>
-        <i class="fas fa-hiking fa-3x"></i> 
+        <div class="icon-div">
+          <i class="fas fa-hiking fa-2x"></i>
+        </div> 
         <span>
           DAILY ACTIVITIES &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -113,7 +123,9 @@
 
     <div class="row6" draggable='true'>
       <span>
-        <i class="fas fa-funnel-dollar fa-3x"></i> 
+        <div class="icon-div">
+          <i class="fas fa-funnel-dollar fa-2x"></i> 
+        </div>
         <span>
           CROP SALES &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -133,7 +145,9 @@
 
     <div class="row11">
       <span>
-        <i class="fab fa-adversal fa-3x"></i> 
+        <div class="icon-div">
+          <i class="fab fa-adversal fa-2x"></i> 
+        </div>
         <span>
           Advertisements &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -152,7 +166,9 @@
 
     <div class="row8">
       <span>
-        <i class="fas fa-seedling fa-3x"></i> 
+        <div class="icon-div">
+        <i class="fas fa-seedling fa-2x"></i>
+        </div> 
         <span>
           SEEDBEB PLANTING &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -171,7 +187,9 @@
 
     <div class="row9">
       <span>
-        <i class="fas fa-laptop-house fa-3x"></i> 
+        <div class="icon-div">
+        <i class="fas fa-laptop-house fa-2x"></i> 
+        </div>
         <span>
           Property Records &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -191,7 +209,9 @@
 
     <div class="row10">
       <span>
-        <i class="fas fa-layer-group fa-3x"></i> 
+        <div class="icon-div">
+          <i class="fas fa-layer-group fa-2x"></i> 
+        </div>
         <span>
           LIVESTOCK & HORTICULTURE &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -201,7 +221,9 @@
 
     <div class="row7">
       <span>
-        <i class="fas fa-cogs fa-3x"></i> 
+        <div class="icon-div">
+        <i class="fas fa-cogs fa-2x"></i>
+        </div>
         <span>
           OTHERS &nbsp;
           <i class='fas fa-angle-right'></i>
@@ -225,17 +247,17 @@
 
     <div class="row12">
       <div class="section">
-      <span>
-        <label for="control1">
-          <i class='fas fa-angle-double-right fa-3x'></i>
-        </label>
-      </span>
+        <span>
+          <label for="control1">
+            <i class='fas fa-angle-double-right fa-3x'></i>
+          </label>
+        </span>
 
-      <span>
-        <label for="control2">
-          <i class='fas fa-angle-double-left fa-3x'></i>
-        </label>
-      </span>
+        <span>
+          <label for="control2">
+            <i class='fas fa-angle-double-left fa-3x'></i>
+          </label>
+        </span>
       </div>
     </div>
   </div>
