--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,13 +27,15 @@
             <% end %>
           </div>
 
-          <p class="navbar-item blink has-text-white text">
-            <%= pass_greeting_to_users %>
-          </p>
-
           <p class="navbar-item has-text-white text">
             <%= current_date %>
           </p>
+
+          <div class="navbar-item">
+            <span class="has-text-white text animation" data-id="<%= pass_greeting_to_users %>">
+            </span>
+            <span class="text-animation blinks">|</span>
+          </div>
         </div>
 
         <% if user_signed_in? %>
