--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
           <div class="navbar-item">
             <span class="has-text-white text animation" data-id="<%= pass_greeting_to_users %>">
             </span>
-            <span class="text-animation blinks">|</span>
+            <span class="text-animation blinks"></span>
           </div>
         </div>
 
