--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="columns pb-0">
     <div class="column pb-0">
       <div class="card pb-0">
-        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">All Users</strong></h1>
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light user-text">All Users</strong></h1>
         <div class="card-content has-background-light">
           <div class="content has-text-centered">
             <canvas id="allUsers" width="150" height="100" data-id="<%= User.all.count %>">
@@ -14,7 +14,7 @@
 
     <div class="column pb-0">
       <div class="card pb-0">
-        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">Admin Users</strong></h1>
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light user-text">Admin Users</strong></h1>
         <div class="card-content has-background-light">
           <div class="content has-text-centered users-count" data-id="<%= User.all.count %>">
             <canvas id="admin" width="150" height="100" data-id="<%= User.all.admin.count %>">
@@ -26,7 +26,7 @@
 
     <div class="column pb-0">
       <div class="card pb-0">
-        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">Farm Owners</strong></h1>
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light user-text">Farm Owners</strong></h1>
         <div class="card-content has-background-light">
           <div class="content has-text-centered">
             <canvas id="farmOwner" width="150" height="100" data-id="<%= User.all.farm_owner.count %>">
@@ -38,7 +38,7 @@
 
     <div class="column pb-0">
       <div class="card pb-0">
-        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">Farm Manager</strong></h1>
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light user-text">Farm Manager</strong></h1>
         <div class="card-content has-background-light">
           <div class="content has-text-centered">
             <canvas id="farmManager" width="150" height="100" data-id="<%= User.all.manager.count %>">
@@ -50,7 +50,7 @@
 
     <div class="column pb-0">
       <div class="card pb-0">
-        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">Verified Users</strong></h1>
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light user-text">Verified Users</strong></h1>
         <div class="card-content has-background-light">
           <div class="content has-text-centered">
             <canvas id="verified" width="150" height="100" data-id="<%= User.all.verified.count %>">
@@ -62,7 +62,7 @@
 
     <div class="column pb-0">
       <div class="card pb-0">
-        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">Contractors</strong></h1>
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light user-text">Contractors</strong></h1>
         <div class="card-content has-background-light">
           <div class="content has-text-centered">
             <canvas id="contractor" width="150" height="100" data-id="<%= User.all.contractor.count %>">
