--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,10 @@
           </div>
 
           <p class="navbar-item has-text-white text">
+            <%= link_to 'Daily Tasks', home_index_path, class:"has-text-white text xtra-links" %>
+          </p>
+
+          <p class="navbar-item has-text-white text">
             <%= current_date %>
           </p>
 
