--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     <div class="todo-container">
       <div class="todo">
         <div class="heading">
-          <p>Today's To Do</p>
+          <p>Today's Tasks</p>
           <i class="fas fa-sync-alt"></i>
         </div>
           <form class="inputs">
